--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de exercício</title>
+    <title>Vamos contar</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Vamos contar</h1>
     </header>
 
     <section>
         <div>
-            Testando...
+            Inicio: <input type="number" name="inicio" id="inicio"> <br>
+            Fim: <input type="number" name="fim" id="fim"> <br>
+            Passo: <input type="number" name="passo" id="passo">
         </div>
         <div>
             Olá
