--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -14,12 +14,13 @@
 
     <section>
         <div>
-            Inicio: <input type="number" name="inicio" id="inicio"> <br>
-            Fim: <input type="number" name="fim" id="fim"> <br>
-            Passo: <input type="number" name="passo" id="passo">
+            <p>Inicio: <input type="number" name="inicio" id="inicio"> </p>
+            <p>Fim: <input type="number" name="fim" id="fim"> </p>
+            <p>Passo: <input type="number" name="passo" id="passo"></p> 
+            <p><input type="button" value="Contar" onclick="contagem()"> </p>
         </div>
-        <div>
-            Olá
+        <div id="res">
+            Preparando a contagem...
         </div>
     </section>
 
